syntax = "proto3";
package boolean_threshold_network;

message Experiment {
  MetaData metadata = 1;
  ExperimentConfig experiment_config = 2;
  repeated Result results = 3;
}

message ExperimentConfig {
  uint32 num_networks = 1;
  DynamicsConfig dynamics_config = 2;
  NetworkConfig network_config = 3;
  DrugConfig drug_config = 4;
}

/* Helper messages below. */
message MetaData {
  string tag = 1;
  uint32 start_time_s = 2;
  optional uint32 end_time_s = 3;
}

message NetworkConfig {
  uint32 network_size = 1;
  double expected_connectivity = 2;
  double gamma = 3;
  uint32 seed = 4;
}

message DynamicsConfig {
  uint32 num_steps = 1;
  uint32 num_initial_conditions = 2;
  uint32 seed = 3;
}

message DrugConfig {
  uint32 num_drugs = 1;
  uint32 num_targets_per_drug = 2;
  double drug_strength = 3;
  uint32 seed = 4;
}

message Result {
  Network original_network = 1;
  repeated Perturbation perturbations = 2;
  uint32 network_idx = 3;
}

message EdgePerturbation {
  uint32 source = 1;
  uint32 target = 2;
  // new weight <- old_weight + delta
  // so, old_weight <- new_weight - delta
  double delta = 3;
}

message Perturbation {
  string name = 1;
  repeated EdgePerturbation edge_perturbations = 2;
  repeated Trajectory trajectories = 3;
}

message Trajectory {
  repeated State states = 1;
  uint32 initial_condition_idx = 2;
}

message State {
  repeated bool state = 1;
  uint32 step_num = 2;
}

message Network {
  repeated Edge edges = 1;
}

message Edge {
  uint32 source = 1;
  uint32 target = 2;
  double weight = 3;
}